src/ariel-os-macros/tests/ui/hook/missing_parameter.rs
#![no_main]

// FAIL: missing parameter
#[ariel_os::hook(usb_builder)]
fn usb_builder() {}
